--- a/config.org
+++ b/config.org
@@ -1754,6 +1754,17 @@ NEED: Show matches only in THIS file.
 
 #+BEGIN_SRC emacs-lisp
   (org-add-link-type
+    "agenda"
+      (lambda (keyseq)
+       "Display a list of TODO headlines with tag TAG.
+        With prefix argument, also display headlines without a TODO keyword."
+        (org-agenda nil keyseq)
+      )
+  )
+#+END_SRC
+
+#+BEGIN_SRC emacs-lisp
+  (org-add-link-type
     "grep"
       (lambda (regexp)
        "Run `rgrep' with REGEXP as argument."
