--- a/config.org
+++ b/config.org
@@ -4706,6 +4706,7 @@ following elisp variable to segregate the headlines into various sections.
   (setq agendagroups/personal-scheduled-tasks
     '(
       (:discard (:tag "ZEOMEGA"))  ;; skip work-related tasks
+      (:discard (:category "INBOX"))  ;; skip work-related tasks
 
 ;;; create a section for DONE tasks, directing me to archive them.
 
