--- a/config.org
+++ b/config.org
@@ -4762,6 +4762,7 @@ following elisp variable to segregate the headlines into various sections.
   (setq agendagroups/zeomega-scheduled-tasks  ;; presentation defn using org-super-agenda
     '(
       (:discard (:not (:tag "ZEOMEGA")))  ;; skip non-work-related tasks
+      (:discard (:category "INBOX"))  ;; skip pending items in Inbox.org
 
 ;;; create a section for DONE tasks, directing me to archive them.
 
