--- a/config.org
+++ b/config.org
@@ -4707,6 +4707,7 @@ following elisp variable to segregate the headlines into various sections.
     '(
       (:discard (:tag "ZEOMEGA"))  ;; skip work-related tasks
       (:discard (:category "INBOX"))  ;; skip pending items in Inbox.org
+      (:discard (:tag "COMMENT"))  ;; skip commented items in Inbox.org
 
 ;;; create a section for DONE tasks, directing me to archive them.
 
