--- a/config.org
+++ b/config.org
@@ -4711,7 +4711,7 @@ following elisp variable to segregate the headlines into various sections.
 
 ;;; create a section for DONE tasks, directing me to archive them.
 
-;;;      (:name "Tasks Scheduled for Today       :HOT:"     :tag "HOT")
+      (:name "Tasks Scheduled for Today       :HOT:"     :tag "HOT")
       (:name "Maintain Physical/Mental Health :HEALTH:"  :tag "HEALTH")
       (:name "To Not Worry About Money        :FINANCE:" :tag "FINANCE")
 ;;;      (:name "To Have a Fantastic Career           :ZEOMEGA:" :tag "ZEOMEGA")
