--- a/config.org
+++ b/config.org
@@ -2932,7 +2932,7 @@ e     Export views to associated files.
 - my own training
 
 - I initially started with passive tag words like TOSTUDY or THINGSTOSTUDY but
-  since have switched to imperative tag words, like STUDY, WRITE, TRAVEL to
+  since have switched to imperative tag words, like STUDY, COMPOSE, TRAVEL to
   encourage my mind to actually do them.
 
 - STUDY ::
