--- a/config.org
+++ b/config.org
@@ -4120,6 +4120,8 @@ https://github.com/yyr/org-mode/blob/master/contrib/lisp/org-collector.el
 |           |        |
 #+END:
 
+***** Foobar 34
+
 *** Make org-mode Checkboxes Work in Headlines, not just Bulleted Items
 #+BEGIN_SRC DISABLEDemacs-lisp
   (defun wicked/org-update-checkbox-count (&optional all)
