--- a/config.org
+++ b/config.org
@@ -4091,9 +4091,6 @@ protocol (org-protocol://); emacsclient then parses the request and tells
 Emacs to capture or store stuff at the relevant places in your Org files.
 
 *** Generating Tables from Org-Properties (org-collector for columnview tables)
-:PROPERTIES:
-:amount:   2.25
-:END:
 
 The ~org-collector~ package provides an extended functionality over the
 ~column view~ feature of Org-Mode.  It allows query expressions to filter out
@@ -4113,11 +4110,12 @@ https://github.com/yyr/org-mode/blob/master/contrib/lisp/org-collector.el
 :END:
 
 #+BEGIN: propview :cols (ITEM AMOUNT)
-| ITEM      | AMOUNT |
-|-----------+--------|
-| "Blah 12" |   2.25 |
-|-----------+--------|
-|           |        |
+| ITEM        | AMOUNT |
+|-------------+--------|
+| "Blah 12"   |   2.25 |
+| "Foobar 34" |      0 |
+|-------------+--------|
+|             |        |
 #+END:
 
 ***** Foobar 34
