--- a/config.org
+++ b/config.org
@@ -5067,7 +5067,7 @@ multiple DIRECTIONs in an agenda, which is what I want.
   ("ps" "Things to Study" tags  ;; key[1] desc[2] type[3]
     "+TAGS={:DIRECTION:}+ZEOMEGA"  ;; entry match-expression[4]
     ( ;; [5] list of settings local to this custom agenda view
-      (org-agenda-overriding-header "Technology Directions")
+      (org-agenda-overriding-header "Things to Study")
 
       (org-agenda-prefix-format "  ")  ;; remove Category
       (org-agenda-remove-tags t)
