--- a/config.org
+++ b/config.org
@@ -5094,6 +5094,9 @@ following elisp variable to segregate the headlines into various sections.
 
 ;;; create a section for DONE tasks, directing me to archive them.
 
+      (:name "Finance Learning :FINANCE:"  :tag "FINANCE")
+
+
 ;;;      (:name "Tasks Scheduled for Today       :HOT:"     :tag "HOT")
 ;;;      (:name "Maintain Physical/Mental Health :HEALTH:"  :tag "HEALTH")
 ;;;      (:name "To Not Worry About Money        :FINANCE:" :tag "FINANCE")
