--- a/config.org
+++ b/config.org
@@ -5097,6 +5097,7 @@ following elisp variable to segregate the headlines into various sections.
       (:name "Finance Learning     :FINANCE:"  :tag "FINANCE")
       (:name "Health Matters       :HEALTH:"   :tag "HEALTH")
       (:name "Cognitive Practices  :MENTAL:"   :tag "MENTAL")
+      (:name "Messaging Tech       :MSG-TECH:" :tag "MSG-TECH")
 
 ;;;      (:name "Tasks Scheduled for Today       :HOT:"     :tag "HOT")
 ;;;      (:name "Maintain Physical/Mental Health :HEALTH:"  :tag "HEALTH")
