--- a/config.org
+++ b/config.org
@@ -5101,6 +5101,7 @@ following elisp variable to segregate the headlines into various sections.
       (:name "Docker Containers         :DOCKER:"     :tag "DOCKER")
       (:name "Kubernetes Orchestration  :K8S:"        :tag "K8S")
       (:name "Data Storage              :DATASTORE:"  :tag "DATASTORE")
+      (:name "Microservices             :USVCS:"      :tag "USVCS")
 
 ;;;      (:name "Tasks Scheduled for Today       :HOT:"     :tag "HOT")
 ;;;      (:name "Maintain Physical/Mental Health :HEALTH:"  :tag "HEALTH")
