--- a/config.org
+++ b/config.org
@@ -5103,7 +5103,8 @@ following elisp variable to segregate the headlines into various sections.
       (:name "Data Storage              :DATASTORE:"  :tag "DATASTORE")
       (:name "Microservices             :USVCS:"      :tag "USVCS")
       (:name "Emacs Editor              :EMACS:"      :tag "EMACS")
-      (:name "Python Programming        :PYTHON:"      :tag "PYTHON")
+      (:name "Python Programming        :PYTHON:"     :tag "PYTHON")
+      (:name "Mathematics               :MATH:"       :tag "MATH")
 
 ;;;      (:name "Tasks Scheduled for Today       :HOT:"     :tag "HOT")
 ;;;      (:name "Maintain Physical/Mental Health :HEALTH:"  :tag "HEALTH")
