--- a/config.org
+++ b/config.org
@@ -5106,6 +5106,7 @@ following elisp variable to segregate the headlines into various sections.
       (:name "Python Programming        :PYTHON:"     :tag "PYTHON")
       (:name "Mathematics               :MATH:"       :tag "MATH")
       (:name "Linux                     :LINUX:"      :tag "LINUX")
+      (:name "AI/ML                     :AIML:"       :tag "AIML")
 
 ;;;      (:name "Tasks Scheduled for Today       :HOT:"     :tag "HOT")
 ;;;      (:name "Maintain Physical/Mental Health :HEALTH:"  :tag "HEALTH")
