--- a/config.org
+++ b/config.org
@@ -5094,7 +5094,7 @@ following elisp variable to segregate the headlines into various sections.
 
 ;;; create a section for DONE tasks, directing me to archive them.
 
-      (:name "Finance Learning          :FINANCE:"    :tag "FINANCE")
+      (:name "Financial Learning          :FINANCE:"    :tag "FINANCE")
       (:name "Health Matters            :HEALTH:"     :tag "HEALTH")
       (:name "Cognitive Practices       :MENTAL:"     :tag "MENTAL")
       (:name "Messaging Tech            :MSGTECH:"    :tag "MSGTECH")
