--- a/config.org
+++ b/config.org
@@ -6267,7 +6267,7 @@ bbdb:S.*Allen
     (setq
       link
         (concat "file:" (buffer-name) "::"
-          (org-make-org-heading-search-string txt))
+          (org-make-org-heading-search-string "txt"))
 
       desc
         (nth 4 (ignore-errors (org-heading-components)))
