--- a/config.org
+++ b/config.org
@@ -6265,6 +6265,20 @@ bbdb:S.*Allen
     "Construct an Org-Mode style of link to point."
 
     (setq
+      txt
+        (cond
+          ( ; clause 1
+            (org-at-heading-p)
+            nil
+          )
+          ( ; clause 2
+            name     ;; if element has a name, use it as anchor
+          )
+          ( ; clause 3
+            (org-region-active-p)  ;; if region is active, use it as anchor
+            (buffer-substring
+
+
       link
         (concat "file:" (buffer-name) "::"
           (org-make-org-heading-search-string txt))
